Update image paths to use consistent casing

--- a/kuntwara.html
+++ b/kuntwara.html
@@ -174,10 +174,10 @@
         <h4>Ancient Temples and Stone Sculptures</h4>
         <div class="sculpture-gallery">
           <div class="sculpture-item">
-            <img src="kuntwara/sculpture1.jpg" alt="Stone Sculpture 1 depicting Mahabharata scene">
+            <img src="Kuntwara/sculpture1.jpg" alt="Stone Sculpture 1 depicting Mahabharata scene">
           </div>
           <div class="sculpture-item">
-            <img src="kuntwara/sculpture2.jpg" alt="Stone Sculpture 2 depicting Mahabharata scene">
+            <img src="Kuntwara/sculpture2.jpg" alt="Stone Sculpture 2 depicting Mahabharata scene">
           </div>
         </div>
       </div>
