--- a/warwan.html
+++ b/warwan.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Warveen Valley — Discover Kishtwar</title>
+  <link rel="stylesheet" href="responsive.css">
 
   <style>
     /* VARIABLES (Consistent with KNP) */
