--- a/sinthan.html
+++ b/sinthan.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Sinthan Top — Discover Kishtwar</title>
-
+<link rel="stylesheet" href="responsive.css">
   <style>
     :root {
       --primary: #0077b6;
