--- a/places.html
+++ b/places.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Places & Villages — Kishtwar District</title>
+  <link rel="stylesheet" href="responsive.css">
 
   <!-- Combined Elegant + Rustic styles (self-contained) -->
   <style>
