--- a/paddar.html
+++ b/paddar.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Paddar Valley (Sapphire) — Discover Kishtwar</title>
-
+<link rel="stylesheet" href="responsive.css">
   <style>
     /* VARIABLES (Consistent with KNP) */
     :root {
