--- a/history.html
+++ b/history.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>History & Culture – Kishtwar District</title>
+  <link rel="stylesheet" href="responsive.css">
   <style>
     :root {
       --primary: #0077b6;
