--- a/gallery.html
+++ b/gallery.html
@@ -117,7 +117,7 @@
       <div class="gallery-item"><img src="KNPimg/alpine.jpg" alt="Terrace Farming"><div class="gallery-caption">Alpine meadow covered in purple and white flowers</div></div>
       <div class="gallery-item"><img src="Kuntwara/snow3.jpg" alt="Stone Sculpture 1"><div class="gallery-caption">Snow view</div></div>
       <div class="gallery-item"><img src="images/shri kartik swami mandir.jpg" alt="Stone Sculpture 2"><div class="gallery-caption">shri kartik swami mandir</div></div>
-      <div class="gallery-item"><img src="images/jamia masjid.jpg" alt="Temple 3"><div class="gallery-caption">Jamia Masjid K</div></div>
+      <div class="gallery-item"><img src="images/jamia masjid.jpg" alt="Temple 3"><div class="gallery-caption">Jamia Masjid Kishtwar</div></div>
     </div>
 
     <h2>Contact Us</h2>
