--- a/kuntwara.html
+++ b/kuntwara.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Kuntwara — Discover Kishtwar</title>
- <link rel="stylesheet" href="responsive.css">
-  
+  <link rel="stylesheet" href="responsive.css">
 
   <style>
     :root {
@@ -125,7 +124,7 @@
   </header>
 
   <div class="hero detail-hero" role="img" aria-label="Kuntwara Hero Image">
-    <img src="Kuntwara/snow1.jpg" alt="A panoramic view of Kuntwara region">
+    <img src="Kuntwara/mandir.jpg" alt="A panoramic view of Kuntwara region">
     <div class="hero-caption">
       <h2>Kuntwara: Mystical Heritage</h2>
       <p>Known for its legendary connections to Mahabharata, serene landscapes, and traditional village life.</p>
@@ -217,13 +216,13 @@
         <img src="Kuntwara/mandir.jpg" alt="Temple 1">
       </div>
       <div class="gallery-inline-item">
-        <img src="Kuntwara/KuntTemp2.jpg" alt="Temple 2">
+        <img src="Kuntwara/kuntTemp2.jpg" alt="Temple 2">
       </div>
       <div class="gallery-inline-item">
-        <img src="Kuntwara/KuntTemp1.jpg" alt="Temple 3">
+        <img src="Kuntwara/kuntTemp1.jpg" alt="Temple 3">
       </div>
       <div class="gallery-inline-item">
-        <img src="Kuntwara/KuntTemp3.jpg" alt="Temple 4">
+        <img src="Kuntwara/kuntTemp3.jpg" alt="Temple 4">
       </div>
     </div>
 
@@ -246,4 +245,5 @@
   </script>
 </body>
 </html>
+
 
