--- a/gallery.html
+++ b/gallery.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gallery & Contact — Discover Kishtwar</title>
-<<<<<<< HEAD
-=======
   <link rel="stylesheet" href="responsive.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-KCH6FX6VTR"></script>
   <script>
@@ -126,14 +124,14 @@
       <div class="gallery-item"><img src="KNPimg/alpine.jpg" alt="Terrace Farming"><div class="gallery-caption">Alpine meadow covered in purple and white flowers</div></div>
       <div class="gallery-item"><img src="Kuntwara/snow3.jpg" alt="Stone Sculpture 1"><div class="gallery-caption">Snow view</div></div>
       <div class="gallery-item"><img src="images/shri kartik swami mandir.jpg" alt="Stone Sculpture 2"><div class="gallery-caption">shri kartik swami mandir</div></div>
-<<<<<<< HEAD
-      <div class="gallery-item"><img src="images/jamia masjid.jpg" alt="Temple 3"><div class="gallery-caption">Jamia Masjid K</div></div>
-=======
+
+      <div class="gallery-item"><img src="images/jamia masjid.jpg" alt="Temple 3"><div class="gallery-caption">Jamia Masjid </div>
+
       <div class="gallery-item"><img src="images/jamia masjid.jpg" alt="Temple 3"><div class="gallery-caption">Jamia Masjid Kishtwar</div>
 
     <h2>Contact Us</h2>
     <div class="contact-section">
-<<<<<<< HEAD
+
       <form action="contact.php" method="POST">
     
         <!-- User Inputs -->
